# SlavJack

./: CMakeLists.txt  Makefile  SlavJack.md
src/: card.hpp  card_deck.cpp
src/card_games/: card.hpp  card_deck.hpp
src/card_games/enums/: figure.hpp  jokers.hpp  suit.hpp
src/enums/: figure.hpp  suit.hpp
src/server_components/: lobby_state.cpp  lobby_state.hpp  player_id.hpp
tests/: card_deck_test.cpp  card_test.cpp  hello_test.cpp  lobby_state_test.cpp
